--- a/SecurePolicy AI.ipynb
+++ b/SecurePolicy AI.ipynb
@@ -71,8 +71,8 @@
         "csv_content = \"\"\"doc_id,chunk\n",
         "POL_01,\"Returns are accepted within 30 days of purchase. A valid receipt is required.\"\n",
         "POL_02,\"Electronics are subject to a 10% restocking fee if the seal is broken.\"\n",
-        "SHIP_01,\"Standard shipping is free for all orders over $50 within the US.\"\n",
-        "SHIP_02,\"Expedited shipping costs $15.99 and guarantees delivery within 48 hours.\"\n",
+        "SHIP_01,\"Standard shipping is free for all orders over 50USD within the US.\"\n",
+        "SHIP_02,\"Expedited shipping costs 15.99USD and guarantees delivery within 48 hours.\"\n",
         "SEC_01,\"We do not store credit card info; all transactions are encrypted.\" \"\"\"\n",
         "\n",
         "with open('data/faq.csv', 'w') as f:\n",
