--- a/SecurePolicy AI.ipynb
+++ b/SecurePolicy AI.ipynb
@@ -73,7 +73,7 @@
         "POL_02,\"Electronics are subject to a 10% restocking fee if the seal is broken.\"\n",
         "SHIP_01,\"Standard shipping is free for all orders over 50USD within the US.\"\n",
         "SHIP_02,\"Expedited shipping costs 15.99USD and guarantees delivery within 48 hours.\"\n",
-        "SEC_01,\"We do not store credit card info; all transactions are encrypted.\"\n",
+        "SEC_01,\"We do not store credit card info; all transactions are encrypted.\" \"\"\n",
         "\n",
         "with open('data/faq.csv', 'w') as f:\n",
         "    f.write(csv_content)\n",
